Maybe fix double-scrollbars on ios

--- a/app/posts/[slug]/code-dark.scss
+++ b/app/posts/[slug]/code-dark.scss
@@ -22,6 +22,7 @@
   pre,
   code {
     background-color: var(--pre-color);
+    overflow: visible;
   }
 
   :not(pre) > code[class*='language-'] {
